fix working disabled contrast

--- a/client/app/styles/_commons.scss
+++ b/client/app/styles/_commons.scss
@@ -898,6 +898,10 @@ input {
   }
 }
 
+[type=checkbox]:disabled + label {
+  color: $color-gray-dark;
+}
+
 .cf-inline-form {
   line-height: 4em;
 
